force-app/main/default/objects/FEC_KYC__c/FEC_KYC__c.object-meta.xml
<CustomObject>
    <label>KYC</label>
    <nameField>
        <label>KYC Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>KYC</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>