force-app/main/default/objects/FEC_KYC__c/fields/FEC_Field_Type__c.field-meta.xml
<CustomField>
    <fullName>FEC_Field_Type__c</fullName>
    <label>Field Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>FEC_Masking_Type</valueSetName>
    </valueSet>
</CustomField>