force-app/main/default/objects/FEC_KYC__c/fields/FEC_KYC_Method__c.field-meta.xml
<CustomField>
    <fullName>FEC_KYC_Method__c</fullName>
    <description>Phương thức xác minh thông tin</description>
    <label>KYC Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>KYC_Method</valueSetName>
    </valueSet>
</CustomField>