force-app/main/default/objects/FEC_KYC__c/fields/FEC_KYC_Suggested_Answer__c.field-meta.xml
<CustomField>
    <fullName>FEC_KYC_Suggested_Answer__c</fullName>
    <description>Nội dung gợi ý sẽ hiển thị khi User chọn vào câu hỏi KYC</description>
    <label>Suggested Answer</label>
    <length>255</length>
    <type>Text</type>
</CustomField>