force-app/main/default/objects/FEC_KYC__c/fields/FEC_Masking__c.field-meta.xml
<CustomField>
    <fullName>FEC_Masking__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Masking</label>
    <type>Checkbox</type>
</CustomField>