force-app/main/default/objects/FEC_KYC__c/fields/FEC_Plastic_ID__c.field-meta.xml
<CustomField>
    <fullName>FEC_Plastic_ID__c</fullName>
    <label>Plastic ID</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>RS1</fullName>
            </value>
            <value>
                <fullName>RS2</fullName>
            </value>
            <value>
                <fullName>RS3</fullName>
            </value>
            <value>
                <fullName>RS4</fullName>
            </value>
            <value>
                <fullName>RS5</fullName>
            </value>
            <value>
                <fullName>RS6</fullName>
            </value>
            <value>
                <fullName>RS7</fullName>
            </value>
            <value>
                <fullName>RS8</fullName>
            </value>
            <value>
                <fullName>RS9</fullName>
            </value>
            <value>
                <fullName>KM1</fullName>
            </value>
            <value>
                <fullName>DC2</fullName>
            </value>
            <value>
                <fullName>DC3</fullName>
            </value>
            <value>
                <fullName>DC5</fullName>
            </value>
            <value>
                <fullName>DC6</fullName>
            </value>
            <value>
                <fullName>DC7</fullName>
            </value>
            <value>
                <fullName>DC8</fullName>
            </value>
            <value>
                <fullName>DP3</fullName>
            </value>
            <value>
                <fullName>VT1</fullName>
            </value>
            <value>
                <fullName>SP1</fullName>
            </value>
            <value>
                <fullName>LZ1</fullName>
            </value>
            <value>
                <fullName>VL1</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
            <value>
                <fullName>All</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>