force-app/main/default/objects/FEC_KYC__c/fields/FEC_Product_Type__c.field-meta.xml
<CustomField>
    <fullName>FEC_Product_Type__c</fullName>
    <label>Product Type</label>
    <referenceTo>FEC_Product_Type__c</referenceTo>
    <relationshipLabel>KYC</relationshipLabel>
    <relationshipName>KYC</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>