force-app/main/default/objects/FEC_KYC__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>FEC_Product_Type__c</columns>
    <columns>FEC_KYC_Method__c</columns>
    <columns>FEC_KYC_Suggested_Answer__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>